Moved to using time instead of chrono. Fixes #4.
Some large changes introduced is the re-export of std::time::{Duration, Instant},
which means you'll want to stop using time::Duration, as that's completely different now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ members = [
 [dependencies]
 brotli = { version = "^3", optional = true }
 bytes = "^1"
-chrono = "^0.4.19"
 flate2 = { version = "^1", optional = true }
 futures = "^0.3"
 h2 = { version = "^0.3", default-features = false, optional = true }
@@ -44,6 +43,7 @@ percent-encoding = "^2.1.0"
 rustls = { version = "^0.20", optional = true }
 rustls-pemfile = { version = "^0.2", optional = true }
 tokio = { version = "^1.13", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
+time = { version = "^0.3.7", features = ["parsing", "formatting", "macros"] }
 webpki = { version = "^0.22", optional = true }
 
 [features]
