--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -12,10 +12,9 @@ license = "Apache-2.0"
 categories = ["web-programming", "development-tools::testing"]
 
 [dependencies]
-kvarn = { path = "../", features = ["full"] }
-# kvarn = { version = "^0", features = ["full"] }
-reqwest = { version = "^0.11" }
-rand = "^0.8"
-rcgen = "^0.9"
-tokio = { version = "^1.13", features = ["macros"] }
-rustls = "^0.20"
+kvarn = { path = "../", features = ["full"], version = "0.3" }
+reqwest = { version = "0.11" }
+rand = "0.8"
+rcgen = "0.9"
+tokio = { version = "1.16", features = ["macros"] }
+rustls = "0.20"
