--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -13,10 +13,9 @@ categories = ["template-engine"]
 
 [dependencies]
 futures = "0.3"
-kvarn = { path = "../", default-features = false }
-# kvarn = { version = "^0.3", default-features = false }
+kvarn = { path = "../", default-features = false, version = "0.3" }
 kvarn-fastcgi-client = { version = "0.1", optional = true }
-tokio = { version = "1.13", optional = true, features = ["net", "io-util"] }
+tokio = { version = "1.16", optional = true, features = ["net", "io-util"] }
 url-crawl = { version = "0.1", optional = true }
 async_chunked_transfer = "1.4"
 
