--- a/chute/Cargo.toml
+++ b/chute/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn-chute"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -34,3 +34,7 @@ default = ["date", "bin"]
 date = ["time"]
 
 bin = ["env_logger", "clap"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
