--- a/chute/Cargo.toml
+++ b/chute/Cargo.toml
@@ -26,7 +26,7 @@ time = { version = "0.3", optional = true, features = ["formatting", "macros", "
 kvarn_utils = "0.3.1"
 
 # Bin deps
-clap = { version = "3", optional = true, features = ["cargo"] }
+clap = { version = ">= 3.1, < 4", optional = true, features = ["cargo"] }
 env_logger = { version = "0.9", optional = true }
 
 [features]
