--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["template-engine"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3"
+futures-util = "0.3"
 kvarn = { path = "../", default-features = false, version = "0.3" }
 kvarn-fastcgi-client = { version = "0.1", optional = true }
 tokio = { version = "1.17", optional = true, features = ["net", "io-util"] }
