CI: main & extensions ignore changes to kvarnctl.

--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -4,9 +4,11 @@ on:
     push:
         paths-ignore:
             - "chute/**"
+            - "ctl/**"
             - "tests/**"
             - "testing/**"
             - ".github/workflows/chute.yml"
+            - ".github/workflows/kvarnctl.yml"
             - ".github/dependabot.yml"
             - "README.md"
             - "roadmap.md"
