--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ on:
         paths-ignore:
             - "extensions/**"
             - "chute/**"
+            - "ctl/**"
             - "url_crawl/**"
             - ".github/workflows/chute.yml"
             - ".github/workflows/extensions.yml"
+            - ".github/workflows/kvarnctl.yml"
             - ".github/dependabot.yml"
             - "README.md"
             - "roadmap.md"
