--- a/signal/Cargo.toml
+++ b/signal/Cargo.toml
@@ -14,3 +14,7 @@ keywords = ["ipc", "kvarn"]
 [dependencies]
 log = "0.4"
 tokio = { version = "1", features = ["net", "time", "io-util", "rt", "fs"] }
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
