--- a/chute/Cargo.toml
+++ b/chute/Cargo.toml
@@ -28,7 +28,7 @@ kvarn_utils = "0.3.1"
 # Bin deps
 clap = { version = ">= 3.1, < 4", optional = true, features = ["cargo"] }
 clap_autocomplete = { version = "0.1", optional = true }
-env_logger = { version = "0.9", optional = true }
+env_logger = { version = "0.9", optional = true, default-features = false, features = ["termcolor", "atty", "humantime"] }
 
 [features]
 default = ["date", "bin", "completion"]
