--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 clap = { version = "3", features = ["cargo"] }
-env_logger = "0.9"
+env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 kvarn_signal = { path = "../signal", version = "0.1" }
 kvarn_utils = { path = "../utils", version = "0.3" }
 log = "0.4"
