--- a/signal/Cargo.toml
+++ b/signal/Cargo.toml
@@ -12,6 +12,7 @@ license = "Apache-2.0"
 keywords = ["ipc", "kvarn"]
 
 [dependencies]
+futures-util = "0.3"
 log = "0.4"
 tokio = { version = "1", features = ["net", "time", "io-util", "rt", "fs"] }
 
