--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -18,4 +18,4 @@ env_logger = { version = "0.9", default-features = false, features = ["termcolor
 kvarn_signal = { path = "../signal", version = "0.1" }
 kvarn_utils = { path = "../utils", version = "0.3" }
 log = "0.4"
-tokio = { version = "1", features = ["rt", "io-util", "macros"] }
+tokio = { version = "1", features = ["rt", "io-util", "macros", "time"] }
