--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -34,8 +34,10 @@ jobs:
             - uses: Swatinem/rust-cache@v1
             - name: Checking formatting
               run: cargo fmt -- --check
-            - name: Checking lints will all features
+            - name: Checking lints with all features
               run: cargo clippy --all-targets --all-features -- -D warnings
+            - name: Checking lints with no features
+              run: cargo clippy --no-default-features -- -D warnings
             - name: Checking doc references
               uses: Icelk/rustdoc-link-check@v1
               with:
