--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,17 +39,17 @@ jobs:
               uses: actions-rs/cargo@v1
               with:
                   command: clippy
-                  args: --workspace --all-targets -- -D warnings
+                  args: --workspace --exclude kvarn-extensions --all-targets -- -D warnings
             - name: Checking lints with all features
               uses: actions-rs/cargo@v1
               with:
                   command: clippy
-                  args: --all-targets --all-features -- -D warnings
+                  args: --workspace --exclude kvarn-extensions --all-targets --all-features -- -D warnings
             - name: Checking lints with no features
               uses: actions-rs/cargo@v1
               with:
                   command: clippy
-                  args: --workspace --no-default-features -- -D warnings
+                  args: --workspace --exclude kvarn-extensions --no-default-features -- -D warnings
             - name: Checking doc references
               uses: Icelk/rustdoc-link-check@v1
               with:
@@ -58,7 +58,7 @@ jobs:
               uses: actions-rs/cargo@v1
               with:
                   command: test
-                  args: --workspace
+                  args: --workspace --exclude kvarn-extensions
 
     build:
         needs: [check]
