--- a/.github/workflows/chute.yml
+++ b/.github/workflows/chute.yml
@@ -4,6 +4,7 @@ on:
     push:
         paths:
             - "chute/**"
+            - "utils/**"
             - ".github/workflows/chute.yml"
 
 env:
