--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ on:
             - ".github/workflows/kvarnctl.yml"
             - ".github/dependabot.yml"
             - "README.md"
+            - "CHANGELOG.md"
             - "roadmap.md"
             - "LICENSE"
 
