--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,9 @@ tokio = { version = "1.17", features = ["rt", "io-util", "net", "fs", "sync", "p
 webpki = { version = "0.22", optional = true }
 x509-parser = { version = "0.13", optional = true }
 
+[target.'cfg(unix)'.dependencies]
+libc = { version = "0.2", default-features = false }
+
 [features]
 default = ["full"]
 
