--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -20,3 +20,6 @@ kvarn_signal = { path = "../signal", version = "0.1" }
 kvarn_utils = { path = "../utils", version = "0.4" }
 log = "0.4"
 tokio = { version = "1.17", features = ["rt", "io-util", "macros", "time"] }
+
+[target.'cfg(unix)'.dependencies]
+libc = { version = "0.2", default-features = false }
