--- a/async/Cargo.toml
+++ b/async/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn_async"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -15,5 +15,5 @@ categories = ["web-programming", "asynchronous"]
 [dependencies]
 bytes = "1"
 http = "0.2"
-kvarn_utils = { path = "../utils", version = "0.4" }
+kvarn_utils = { path = "../utils", version = "=0.4.1" }
 tokio = { version = "1.17", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
