--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn-extensions"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 description = "Extensions for the Kvarn web server. Features HTTP/2 automatic push and a templating engine."
@@ -13,7 +13,7 @@ categories = ["template-engine"]
 
 [dependencies]
 futures-util = "0.3"
-kvarn = { path = "../", default-features = false, version = "0.4" }
+kvarn = { path = "../", default-features = false, version = "=0.4.1" }
 kvarn-fastcgi-client = { version = "0.1", optional = true }
 tokio = { version = "1.17", optional = true, features = ["net", "io-util"] }
 url-crawl = { version = "0.1", optional = true }
@@ -29,7 +29,7 @@ reverse-proxy = ["connection"]
 
 [dev-dependencies]
 tokio = { version = "1.17", features = ["net", "io-util", "macros"] }
-kvarn_testing = { path = "../testing", version = "0.4" }
+kvarn_testing = { path = "../testing", version = "=0.4.1" }
 
 [package.metadata.docs.rs]
 all-features = true
