--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kvarn_testing"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -12,7 +12,7 @@ license = "Apache-2.0"
 categories = ["web-programming", "development-tools::testing"]
 
 [dependencies]
-kvarn = { path = "../", features = ["full"], version = "0.4" }
+kvarn = { path = "../", features = ["full"], version = "=0.4.1" }
 reqwest = { version = "0.11" }
 rand = "0.8"
 rcgen = "0.9"
