--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "kvarn"
 # also bump all other versions (e.g. `grep 0\\.3`)
 # remove "#![doc(html_root_url = "https://doc.kvarn.org/")]" from lib.rs
-version = "0.4.1"
+version = "0.5.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
 rust-version = "1.56"
@@ -33,15 +33,15 @@ members = [
 bytes = "1"
 h2 = { version = "0.3", default-features = false, optional = true }
 http = "0.2"
-kvarn_async = { path = "async", version = "=0.4.1" }
-kvarn_utils = { path = "utils", version = "=0.4.1" }
+kvarn_async = { path = "async", version = "0.5.0" }
+kvarn_utils = { path = "utils", version = "0.5.0" }
 kvarn_signal = { path = "signal", version = "0.1" }
 log = "0.4"
 mime = "0.3"
 mime_guess = "2"
 percent-encoding = "2"
 time = { version = "0.3.7", features = ["parsing", "formatting", "macros"] }
-tokio = { version = "1.17", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
+tokio = { version = "1.20", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
 
 # HTTPS
 rustls = { version = "0.20", optional = true }
@@ -99,7 +99,7 @@ websocket = ["tokio-tungstenite", "sha-1", "base64", "futures-util"]
 # also add to https://kvarn.org/cargo-features.
 
 [dev-dependencies]
-kvarn_testing = { path = "testing", version = "=0.4.1" }
+kvarn_testing = { path = "testing", version = "0.5" }
 
 # profile for binary sub-crates.
 [profile.distribution]
