--- a/chute/Cargo.toml
+++ b/chute/Cargo.toml
@@ -27,8 +27,8 @@ time-tz = { version = "1", optional = true, features = ["system"] }
 kvarn_utils = "0.5"
 
 # Bin deps
-clap = { version = ">= 3.1, < 5", optional = true, features = ["cargo"] }
-clap_autocomplete = { version = "0.2", optional = true }
+clap = { version = "4", optional = true, features = ["cargo"] }
+clap_autocomplete = { version = "0.3", optional = true }
 env_logger = { version = "0.9", optional = true, default-features = false, features = ["termcolor", "atty", "humantime"] }
 
 [features]
