--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -27,12 +27,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checking out sources
-              uses: actions/checkout@v1
-            - name: Installing Rust toolchain
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
-            - uses: Swatinem/rust-cache@v1
+              uses: actions/checkout@v3
+            - run: rustup toolchain install stable
+            - uses: Swatinem/rust-cache@v2
             - name: Checking formatting
               run: cargo fmt -- --check
             - name: Checking lints with all features
@@ -52,13 +49,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checking out sources
-              uses: actions/checkout@v1
-            - name: Installing Rust toolchain
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
-                  profile: minimal
-            - uses: Swatinem/rust-cache@v1
+              uses: actions/checkout@v3
+            - run: rustup toolchain install stable --minimal
+            - uses: Swatinem/rust-cache@v2
             - name: Compiling
               run: cargo rustc --release -- --crate-type rlib
             - name: Upload rlib artefact
