--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -50,7 +50,7 @@ jobs:
         steps:
             - name: Checking out sources
               uses: actions/checkout@v3
-            - run: rustup toolchain install stable --minimal
+            - run: rustup toolchain install stable --profile minimal
             - uses: Swatinem/rust-cache@v2
             - name: Compiling
               run: cargo rustc --release -- --crate-type rlib
