--- a/.github/workflows/kvarnctl.yml
+++ b/.github/workflows/kvarnctl.yml
@@ -33,7 +33,7 @@ jobs:
         steps:
             - name: Checking out sources
               uses: actions/checkout@v3
-            - run: rustup toolchain install stable --minimal
+            - run: rustup toolchain install stable --profile minimal
             - uses: Swatinem/rust-cache@v2
             - name: Compiling
               run: cargo rustc --profile distribution
