--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
             - name: Checking out sources
               uses: actions/checkout@v3
             - name: Installing Rust toolchain
-              run: rustup toolchain install stable --minimal
+              run: rustup toolchain install stable --profile minimal
             - uses: Swatinem/rust-cache@v2
             - run: cargo rustc --release -- --crate-type rlib
             - name: Upload rlib artefact
