--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,13 @@ h2 = { version = "0.3", default-features = false, optional = true }
 http = "0.2"
 kvarn_async = { path = "async", version = "0.5.0" }
 kvarn_utils = { path = "utils", version = "0.5.0" }
-kvarn_signal = { path = "signal", version = "0.1" }
+kvarn_signal = { path = "signal", version = "0.1", optional = true }
 log = "0.4"
 mime = "0.3"
 mime_guess = "2"
 percent-encoding = "2"
 time = { version = "0.3.7", features = ["parsing", "formatting", "macros"] }
-tokio = { version = "1.20", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
+tokio = { version = "1.20", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
 
 # HTTPS
 rustls = { version = "0.20", optional = true }
@@ -72,7 +72,10 @@ libc = { version = "0.2", default-features = false }
 default = ["full"]
 
 # Enable all features
-full = ["all-http", "all-compression", "graceful-shutdown", "auto-hostname", "nonce", "websocket"]
+full = ["all-http", "all-compression", "graceful-shutdown", "auto-hostname", "nonce", "websocket", "base"]
+
+# Enable basic features (for all devices but embedded)
+base = ["async-networking"]
 
 # Compressing
 all-compression = ["br", "gzip"]
@@ -85,7 +88,9 @@ https = ["rustls", "rustls-pemfile", "webpki"]
 http2 = ["h2", "https"]
 
 # Graceful shutdown; shutdown.rs
-graceful-shutdown = []
+graceful-shutdown = ["handover"]
+# Handover
+handover = ["kvarn_signal"]
 
 # Automatic populating of Host name and alt-names
 auto-hostname = ["x509-parser"]
@@ -95,6 +100,9 @@ nonce = ["rand", "base64", "memchr"]
 
 # WebSockets
 websocket = ["tokio-tungstenite", "sha-1", "base64", "futures-util"]
+
+# Use tokio's async networking instead of the blocking variant.
+async-networking = ["tokio/net"]
 
 # also add to https://kvarn.org/cargo-features.
 
