--- a/signal/Cargo.toml
+++ b/signal/Cargo.toml
@@ -12,9 +12,9 @@ license = "Apache-2.0"
 keywords = ["ipc", "kvarn"]
 
 [dependencies]
-futures-util = "0.3"
 log = "0.4"
-tokio = { version = "1.20", features = ["net", "time", "io-util", "rt", "fs", "sync"] }
+tokio = { version = "1.20", features = ["net", "time", "io-util", "rt", "fs", "sync", "macros"] }
+notify = { version = "5", default-features = false, features = ["macos_fsevent"] }
 
 [package.metadata.docs.rs]
 all-features = true
