--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -15,14 +15,14 @@ categories = ["template-engine"]
 futures-util = "0.3"
 kvarn = { path = "../", default-features = false, version = "0.5" }
 kvarn-fastcgi-client = { version = "0.1", optional = true }
-tokio = { version = "1.20", optional = true, features = ["net", "io-util"] }
+tokio = { version = "1.20", features = ["fs"] }
 url-crawl = { version = "0.1", optional = true }
 async_chunked_transfer = "1.4"
 percent-encoding = { version = "2", optional = true }
 
 [features]
 default = ["php", "templates", "push"]
-connection = ["tokio"]
+connection = ["tokio/net", "tokio/io-util"]
 php = ["kvarn-fastcgi-client", "connection", "percent-encoding"]
 templates = []
 push = ["url-crawl"]
