--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { version = "1.20", features = ["fs"] }
 url-crawl = { version = "0.1", optional = true }
 async_chunked_transfer = "1.4"
 percent-encoding = { version = "2", optional = true }
+memchr = "2"
 
 [features]
 default = ["php", "templates", "push"]
