--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -16,10 +16,10 @@ futures-util = "0.3"
 kvarn = { path = "../", default-features = false, version = "0.5" }
 kvarn-fastcgi-client = { version = "0.1", optional = true }
 tokio = { version = "1, >=1.23.1", features = ["fs"] }
-url-crawl = { version = "0.1", optional = true }
 async_chunked_transfer = "1.4"
 percent-encoding = { version = "2", optional = true }
 memchr = "2"
+url-crawl = { path = "../url-crawl", optional = true }
 
 [features]
 default = ["php", "templates", "push"]
@@ -27,7 +27,7 @@ connection = ["tokio/net", "tokio/io-util"]
 php = ["kvarn-fastcgi-client", "connection", "percent-encoding"]
 templates = []
 push = ["url-crawl"]
-reverse-proxy = ["connection"]
+reverse-proxy = ["connection", "url-crawl"]
 
 [dev-dependencies]
 tokio = { version = "1, >=1.23.1", features = ["net", "io-util", "macros"] }
