--- a/chute/Cargo.toml
+++ b/chute/Cargo.toml
@@ -28,7 +28,7 @@ kvarn_utils = "0.5"
 
 # Bin deps
 clap = { version = "4", optional = true, features = ["cargo"] }
-clap_autocomplete = { version = "0.4", optional = true }
+clap_autocomplete = { version = ">= 0.4.1", optional = true }
 env_logger = { version = "0.10", optional = true, default-features = false, features = ["auto-color", "humantime"] }
 log = { version = "0.4.17", optional = true }
 notify-debouncer-mini = { version = "0.2.1", default-features = false }
