--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 clap = { version = "4", features = ["cargo"] }
-clap_autocomplete = "0.4"
+clap_autocomplete = ">= 0.4.1"
 env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
 kvarn_signal = { path = "../signal", version = "0.1" }
 kvarn_utils = { path = "../utils", version = "0.5" }
