--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming", "development-tools::testing"]
 
 [dependencies]
 kvarn = { path = "../", features = ["full"], version = "0.5.0" }
-reqwest = "0.11"
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-manual-roots"] }
 rand = "0.8"
 rcgen = "0.10"
 tokio = { version = "1, >=1.23.1", features = ["macros"] }
