--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -20,6 +20,13 @@ async_chunked_transfer = "1.4"
 percent-encoding = { version = "2", optional = true }
 memchr = "2"
 url-crawl = { path = "../url-crawl", optional = true }
+small-acme = { version = "0.1.0", path = "../../small-acme", optional = true }
+x509-parser = { version = "0.14.0", optional = true }
+rustls = { version = "0.20.8", optional = true, default-features = false }
+# serialize credentials
+ron = { version = "0.8.0", optional = true }
+rcgen = { version = "0.10.0", optional = true }
+rustls-pemfile = { version = "1.0.2", optional = true }
 
 [features]
 default = ["php", "templates", "push"]
@@ -28,6 +35,8 @@ php = ["kvarn-fastcgi-client", "connection", "percent-encoding"]
 templates = []
 push = ["url-crawl"]
 reverse-proxy = ["connection", "url-crawl"]
+# Automatic HTTPS certificates
+certificate = ["small-acme", "x509-parser", "rustls", "rustls-pemfile", "ron", "rcgen", "kvarn/https", "kvarn/async-networking"]
 
 [dev-dependencies]
 tokio = { version = "1, >=1.23.1", features = ["net", "io-util", "macros"] }
