Remove RwLock in view-counter.

--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -28,9 +28,10 @@ ron = { version = "0.8.0", optional = true }
 rcgen = { version = "0.10.0", optional = true }
 rustls-pemfile = { version = "1.0.2", optional = true }
 rand = { version = "0.8.5", optional = true }
+dashmap = { version = "5.4.0", optional = true }
 
 [features]
-default = ["php", "templates", "push"]
+default = ["php", "templates", "push", "view-counter"]
 connection = ["tokio/net", "tokio/io-util"]
 php = ["kvarn-fastcgi-client", "connection", "percent-encoding"]
 templates = []
@@ -38,6 +39,7 @@ push = ["url-crawl"]
 reverse-proxy = ["connection", "url-crawl"]
 # Automatic HTTPS certificates
 certificate = ["small-acme", "x509-parser", "rustls", "rustls-pemfile", "ron", "rcgen", "kvarn/https", "kvarn/async-networking", "rand"]
+view-counter = ["dashmap"]
 
 [dev-dependencies]
 tokio = { version = "1, >=1.23.1", features = ["net", "io-util", "macros"] }
