--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ flate2 = { version = "1", optional = true }
 tokio-tungstenite = { version = "0.18", optional = true, default-features = false }
 sha-1 = { version = "0.10", optional = true }
 futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }
+compact_str = "0.7.0"
 
 [target.'cfg(unix)'.dependencies]
 libc = { version = "0.2", default-features = false }
