--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ percent-encoding = "2"
 time = { version = "0.3.7", features = ["parsing", "formatting", "macros"] }
 # Range because of vulnerability https://rustsec.org/advisories/RUSTSEC-2023-0001.html
 tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
+tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", features = ["bytes"] }
 moka = { version = "0.10.0", features = ["future"], default-features = false }
 
 # HTTPS
