--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,20 +31,25 @@ members = [
 
 [dependencies]
 bytes = "1"
+compact_str = "0.7.0"
+log = "0.4"
+time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
+
 h2 = { version = "0.3", default-features = false, optional = true }
 http = "0.2"
-kvarn_async = { path = "async", version = "0.5.0" }
-kvarn_utils = { path = "utils", version = "0.5.0" }
-kvarn_signal = { path = "signal", version = "0.1", optional = true }
-log = "0.4"
 mime = "0.3"
 mime_guess = "2"
 percent-encoding = "2"
-time = { version = "0.3.7", features = ["parsing", "formatting", "macros"] }
+
+kvarn_async = { path = "async", version = "0.5.0" }
+kvarn_utils = { path = "utils", version = "0.5.0" }
+kvarn_signal = { path = "signal", version = "0.1", optional = true }
 # Range because of vulnerability https://rustsec.org/advisories/RUSTSEC-2023-0001.html
 tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time", "macros"] }
 tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", features = ["bytes"], optional = true }
-moka = { version = "0.10.0", features = ["future"], default-features = false }
+
+moka = { version = "0.10", features = ["sync"], default-features = false }
+dashmap = "5"
 
 # HTTPS
 rustls = { version = "0.21", optional = true }
@@ -67,7 +72,6 @@ flate2 = { version = "1", optional = true }
 tokio-tungstenite = { version = "0.18", optional = true, default-features = false }
 sha-1 = { version = "0.10", optional = true }
 futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }
-compact_str = "0.7.0"
 
 [target.'cfg(unix)'.dependencies]
 libc = { version = "0.2", default-features = false }
